Add js-classes for publishers pages

--- a/src/templates/01_publishers-new-place.twig
+++ b/src/templates/01_publishers-new-place.twig
@@ -18,41 +18,41 @@
 
 					{#FORM#}
 					<div class="publishers__form">
-						<form>
-							<div class="form__input-container">
-								<div class="form__input-text-wrap">
-									<p class="form__input-text">Title</p>
-									<p class="form__input-under-text">for your reference</p>
+						<div class="form">
+							<form>
+								<div class="form__input-container js-form-input-container">
+									<div class="form__input-text-wrap">
+										<p class="form__input-text js-input-text">Title</p>
+										<p class="form__input-under-text">for your reference</p>
+									</div>
+									<div class="form__input-holder">
+										<input type="text" class="form__input js-form-input">
+									</div>
 								</div>
-								<div class="form__input-holder">
-									<input type="text" class="form__input">
+								<div class="form__input-container form__input-container_response">
+									<div class="form__input-text-wrap">
+										<span class="form__input-text">Ad type</span>
+									</div>
+									<div class="form__select-holder">
+										<select class="form__select">
+											<option value="1">Banners Full Size 468x60</option>
+											<option value="2">Banners Full Size 468x60</option>
+											<option value="3">Banners Full Size 468x60</option>
+											<option value="4">Banners Full Size 468x60</option>
+										</select>
+									</div>
 								</div>
-							</div>
-							<div class="form__input-container">
-								<div class="form__input-text-wrap">
-									<span class="form__input-text">Ad type</span>
+								<div class="form__input-container">
+									<div class="form__input-text-wrap">
+										<span class="form__input-text"></span>
+									</div>
+									<div class="form__submit-holder">
+										<button type="submit" class="form__submit btn">submit</button>
+									</div>
 								</div>
-								<div class="form__select-holder">
-									<select class="form__select">
-										<option value="1">Banners Full Size 468x60</option>
-										<option value="2">Banners Full Size 468x60</option>
-										<option value="3">Banners Full Size 468x60</option>
-										<option value="4">Banners Full Size 468x60</option>
-									</select>
-								</div>
-							</div>
-							<div class="form__input-container">
-								<div class="form__input-text-wrap">
-									<span class="form__input-text"></span>
-								</div>
-								<div class="form__input-holder">
-									<button type="submit" class="form__submit btn">
-										submit
-									</button>
-								</div>
-							</div>
 
-						</form>
+							</form>
+						</div>
 					</div>
 					{#/FORM#}
 
