--- a/src/templates/03_publishers-places.twig
+++ b/src/templates/03_publishers-places.twig
@@ -14,7 +14,7 @@
 			<div class="publishers__bg-darken">
 				<div class="publishers__inner container-publishers">
 					<div class="publishers__block">
-						<div class="publishers__title">Your Places</div>
+						<h1 class="publishers__title">Your Places</h1>
 
 						{#YOU PLACES#}
 						<div class="places__table">
@@ -46,7 +46,7 @@
 
 					</div>
 					<div class="publishers__block">
-						<div class="publishers__title">Available Zones</div>
+						<h2 class="publishers__title">Available Zones</h2>
 
 						{#TABLE#}
 						<div class="publishers__table">
