--- a/src/templates/04_publishers-payments.twig
+++ b/src/templates/04_publishers-payments.twig
@@ -14,7 +14,7 @@
 			<div class="publishers__bg-darken">
 				<div class="publishers__inner container-publishers">
 					<div class="publishers__block">
-						<div class="publishers__title">Payment Info</div>
+						<h1 class="publishers__title">Payment Info</h1>
 
 						{#PAYMENT INFO#}
 						<div class="payment-info">
@@ -35,7 +35,7 @@
 
 					</div>
 					<div class="publishers__block">
-						<div class="publishers__title">List of Payment Periods</div>
+						<h2 class="publishers__title">List of Payment Periods</h2>
 
 						{#PAYMENTS TABLE#}
 						<div class="payments-list">
