--- a/src/templates/05_publishers-edit-account.twig
+++ b/src/templates/05_publishers-edit-account.twig
@@ -15,93 +15,93 @@
 			<div class="publishers__bg-darken">
 				<div class="publishers__inner container-publishers">
 					<div class="publishers__block">
-						<div class="publishers__title">Your Account Data</div>
+						<h1 class="publishers__title">Your Account Data</h1>
 
 						{#FORM#}
 						<div class="publishers__form publishers__form_edit-account">
 							<form>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text form__input-text_required">Name</p>
+										<p class="form__input-text js-input-text form__input-text_required">Name</p>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input">
+										<input type="text" class="form__input js-form-input">
 									</div>
 								</div>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text form__input-text_required">E-mail</p>
+										<p class="form__input-text js-input-text form__input-text_required">E-mail</p>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input">
+										<input type="text" class="form__input js-form-input">
 									</div>
 								</div>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text">Password</p>
+										<p class="form__input-text js-input-text">Password</p>
 										<p class="form__input-under-text">Keep it blank to use the current password</p>
 									</div>
 									<div class="form__input-holder">
-										<input type="password" class="form__input">
+										<input type="password" class="form__input js-form-input">
 									</div>
 								</div>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text">Company name</p>
+										<p class="form__input-text js-input-text">Company name</p>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input">
+										<input type="text" class="form__input js-form-input">
 									</div>
 								</div>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text">Business ID</p>
+										<p class="form__input-text js-input-text">Business ID</p>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input">
+										<input type="text" class="form__input js-form-input">
 									</div>
 								</div>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text">City</p>
+										<p class="form__input-text js-input-text">City</p>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input">
+										<input type="text" class="form__input js-form-input">
 									</div>
 								</div>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text">Country</p>
+										<p class="form__input-text js-input-text">Country</p>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input">
+										<input type="text" class="form__input js-form-input">
 									</div>
 								</div>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text">Phone number</p>
+										<p class="form__input-text js-input-text">Phone number</p>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input">
+										<input type="text" class="form__input js-form-input">
 									</div>
 								</div>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text">Payment method</p>
+										<p class="form__input-text js-input-text">Payment method</p>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input">
+										<input type="text" class="form__input js-form-input">
 									</div>
 								</div>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text">Payment details</p>
+										<p class="form__input-text js-input-text">Payment details</p>
 										<p class="form__input-under-text">
 											For example bank account info, Paypal email address, name on a check etc.
 										</p>
 									</div>
 									<div class="form__input-holder">
-										<textarea class="form__textarea form__textarea_publishers"></textarea>
+										<textarea class="form__textarea form__textarea_publishers js-form-input"></textarea>
 									</div>
 								</div>
 								<div class="form__input-container">
@@ -117,10 +117,10 @@
 										</select>
 									</div>
 								</div>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap">
 										<div class="form__input-text-wrap form__input-text-wrap_account">
-											<p class="form__input-text">Minimum payment</p>
+											<p class="form__input-text js-input-text">Minimum payment</p>
 											<p class="form__input-under-text">Minimum is $50</p>
 										</div>
 
@@ -135,21 +135,21 @@
 										</div>
 									</div>
 								</div>
-								<div class="form__input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text publishers__form-text-account_never">Never show ads of advertisers</p>
+										<p class="form__input-text js-input-text">Never show ads of advertisers</p>
 										<p class="form__input-under-text">
 											Enter usernames (separated by commas) of advertisers whose ads should never be displayed on your site.
 										</p>
 									</div>
 									<div class="form__input-holder">
-										<textarea class="form__textarea form__textarea_publishers"></textarea>
+										<textarea class="form__textarea form__textarea_publishers js-form-input"></textarea>
 									</div>
 								</div>
 
 								<div class="form__input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text">Style</p>
+										<p class="form__input-text js-input-text">Style</p>
 									</div>
 									<div class="form__select-holder">
 										<select class="form__select">
@@ -160,11 +160,8 @@
 										</select>
 									</div>
 								</div>
-								<div class="form__input-container">
-									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<span class="form__input-text"></span>
-									</div>
-									<div class="form__input-holder">
+								<div class="form__submit-container">
+									<div class="form__submit-holder form__submit-holder_account">
 										<button type="submit" class="form__submit btn">
 											submit
 										</button>
