--- a/src/templates/02_publishers-messages.twig
+++ b/src/templates/02_publishers-messages.twig
@@ -14,7 +14,7 @@
 			<div class="publishers__bg-darken">
 				<div class="publishers__inner container-publishers">
 					<div class="publishers__block">
-						<div class="publishers__title">Send a New Message to Admin</div>
+						<h1 class="publishers__title">Send a New Message to Admin</h1>
 
 						{#FORM#}
 						<div class="publishers__form">
@@ -39,10 +39,8 @@
 									<div class="form__input-text-wrap">
 										<span class="form__input-text"></span>
 									</div>
-									<div class="form__input-holder">
-										<button type="submit" class="form__submit btn">
-											submit
-										</button>
+									<div class="form__submit-holder">
+										<button type="submit" class="form__submit btn">submit</button>
 									</div>
 								</div>
 
