--- a/src/templates/06_edit-account-advertisers.twig
+++ b/src/templates/06_edit-account-advertisers.twig
@@ -35,7 +35,7 @@
 								<p class="form__input-under-text">Keep it blank to use the current password</p>
 							</div>
 							<div class="form__input-holder">
-								<input type="password" class="form__input">
+								<input type="password" class="form__input js-form-input">
 							</div>
 						</div>
 						<div class="form__input-container js-form-input-container">
