--- a/src/css/blocks/publishers/export.less
+++ b/src/css/blocks/publishers/export.less
@@ -15,5 +15,13 @@
 	&__form-select-wrap {
 		padding-bottom: 20px;
 	}
+}
 
+@media screen and (max-width: 700px) {
+	.export {
+		&__title {
+			font-size: @16;
+			margin-bottom: 20px;
+		}
+	}
 }
