--- a/src/css/blocks/publishers/paymen-info.less
+++ b/src/css/blocks/publishers/paymen-info.less
@@ -17,3 +17,29 @@
 		line-height: 2.5;
 	}
 }
+
+@media screen and (max-width: 700px) {
+	.payment-info {
+		margin-bottom: 30px;
+		padding-left: 12px;
+		&__row {
+			display: block;
+			margin-bottom: 20px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+		&__text {
+			width: 100%;
+			font-size: @12;
+			line-height: 1.3;
+			color: #ffffff;
+		}
+		&__sum {
+			width: 100%;
+			font-size: @12;
+			color: #00c9b3;
+			line-height: 1;
+		}
+	}
+}
