--- a/src/css/blocks/publishers/payments-list.less
+++ b/src/css/blocks/publishers/payments-list.less
@@ -1,5 +1,6 @@
 .payments-list  {
-	padding-bottom: 168px;
+
+
 	&__title{
 		color: #ffffff;
 		margin-bottom: 11px;
@@ -74,6 +75,96 @@
 		}
 		&_7 {
 			width: 9%;
+		}
+	}
+}
+
+@media screen and (max-width: 700px) {
+	.payments-list  {
+		display: flex;
+
+		&__title{
+			flex-direction: column;
+			min-width: 113px;
+			width: 30%;
+			margin-bottom: 0;
+			padding-top: 6px;
+		}
+		&__title-item {
+			.medium();
+			font-size: @12;
+			line-height: 1.29;
+			color: #ffffff;
+			text-align: left;
+			height: 54px;
+			&_1 {
+				width: 100%;
+			}
+			&_2 {
+				width: 100%;
+			}
+			&_3 {
+				width: 100%;
+			}
+			&_4 {
+				width: 100%;
+			}
+			&_5 {
+				width: 100%;
+			}
+			&_6 {
+				width: 100%;
+			}
+			&_7 {
+				width: 100%;
+			}
+
+		}
+		&__block {
+			border: 1px solid white;
+			padding: 7px 6px 12px 6px;
+			overflow: hidden;
+		}
+		&__inner {
+			overflow: auto;
+			overflow-y: hidden;
+			display: flex;
+			margin-right: 0;
+			margin-bottom: -30px;
+		}
+		&__table-row {
+			margin-bottom: 0;
+			flex-direction: column;
+			min-width: 150px;
+		}
+		&__col {
+			.light();
+			font-size: @12;
+			line-height: 1.29;
+			color: #ffffff;
+			text-align: center;
+			height: 54px;
+			&_1 {
+				width: 100%;
+			}
+			&_2 {
+				width: 100%;
+			}
+			&_3 {
+				width: 100%;
+			}
+			&_4 {
+				width: 100%;
+			}
+			&_5 {
+				width: 100%;
+			}
+			&_6 {
+				width: 100%;
+			}
+			&_7 {
+				width: 100%;
+			}
 		}
 	}
 }
