--- a/src/css/blocks/publishers/places.less
+++ b/src/css/blocks/publishers/places.less
@@ -1,4 +1,5 @@
 .places {
+
 	&__table {
 		padding-bottom: 43px;
 	}
@@ -97,5 +98,102 @@
 		font-size: @16;
 		line-height: 1.13;
 		text-decoration: none;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	.places {
+		&__table {
+			display: flex;
+		}
+		&__table-title {
+			flex-direction: column;
+			min-width: 113px;
+			width: 30%;
+			padding-bottom: 0;
+			padding-top: 6px;
+		}
+		&__title-item {
+			.medium();
+			font-size: 14px;
+			line-height: 1.29;
+			color: #ffffff;
+			text-align: left;
+			height: 54px;
+			&_1 {
+				width: 100%;
+				text-align: left;
+			}
+			&_2 {
+				width: 100%;
+			}
+			&_3 {
+				width: 100%;
+			}
+			&_4 {
+				width: 100%;
+			}
+			&_5 {
+				width: 100%;
+			}
+			&_6 {
+				width: 100%;
+			}
+			&_7 {
+				width: 100%;
+			}
+			&_8 {
+				width: 100%;
+			}
+			&_9 {
+				width: 100%;
+			}
+
+		}
+		&__table-block {
+			border: 1px solid white;
+			padding: 8px;
+			margin-bottom: 0;
+			flex-direction: column;
+			width: 100%;
+		}
+		&__item {
+			.medium();
+			font-size: 14px;
+			line-height: 1.29;
+			color: #ffffff;
+			text-align: center;
+			height: 54px;
+			&_1 {
+				width: 100%;
+				text-align: left;
+			}
+			&_2 {
+				width: 100%;
+			}
+			&_3 {
+				width: 100%;
+			}
+			&_4 {
+				width: 100%;
+			}
+			&_5 {
+				width: 100%;
+			}
+			&_6 {
+				width: 100%;
+			}
+			&_7 {
+				width: 100%;
+			}
+			&_8 {
+				width: 100%;
+			}
+			&_9 {
+				width: 100%;
+			}
+
+		}
+
 	}
 }
