--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -39,7 +39,7 @@
 		text-align: center;
 		color: #ffffff;
 		.medium();
-		padding: 40px 0;
+		padding-bottom: 40px;
 	}
 	&__form {
 		padding-bottom: 15px;
@@ -119,6 +119,18 @@
 
 @media screen and (max-width: 700px) {
 	.publishers {
+
+		&__title{
+			font-size: @16;
+			text-align: center;
+			color: #ffffff;
+			.medium();
+			padding-bottom: 20px;
+		}
+		&__inner {
+			padding-top: 20px;
+			padding-bottom: 20px;
+		}
 		&__table {
 			padding-bottom: 0;
 			display: flex;
@@ -138,18 +150,18 @@
 			line-height: 1.29;
 			text-align: left;
 			width: 100%;
-			height: 34%;
+			height: 54px;
 			&:first-child {
 				width: 100%;
-				height: 28%;
+				height: 54px;
 			}
 			&:last-child {
 				width: 100%;
-				height: 38%;
+				height: 54px;
 			}
 		}
 		&__table-block {
-			padding: 7px 0 12px 4px;
+			padding: 7px 6px 12px 6px;
 
 		}
 		&__table-block-inner {
@@ -163,36 +175,32 @@
 			margin-bottom: 0;
 			flex-direction: column;
 			min-width: 150px;
+			padding: 0 4px;
 		}
 		&__col {
 			.light();
-			font-size: 14px;
+			font-size: @12;
 			line-height: 1.29;
 			color: #ffffff;
 			text-align: center;
+			height: 54px;
 			&_1 {
 				width: 100%;
-				height: 28%;
-				margin-bottom: 41px;
 			}
 			&_2 {
 				width: 100%;
-				height: 34%;
-				margin-bottom: 41px;
 			}
 			&_3 {
 				width: 100%;
-				height: 38%;
 				display: block;
-				margin-bottom: 41px;
 			}
 			&_4 {
 				width: 100%;
-				height: 46%;
+				height: 24px;
 			}
 			&_5 {
 				width: 100%;
-				height: 54%;
+				height: 24px;
 			}
 		}
 	}
