--- a/src/css/blocks/guest/features.less
+++ b/src/css/blocks/guest/features.less
@@ -82,6 +82,30 @@
 		&_cryptocurrency {
 			.svg-icon(icon-features-4, 178px, 178px);
 		}
+		&_integrated-marketing {
+			.svg-icon(icon-features-5, 178px, 178px);
+		}
+		&_integrated-marketing {
+			.svg-icon(icon-features-7, 178px, 178px);
+		}
+		&_optimisation {
+			.svg-icon(icon-features-6, 178px, 178px);
+		}
+		&_any-format {
+			.svg-icon(icon-features-5, 178px, 178px);
+		}
+		&_cost {
+			.svg-icon(icon-features-8, 178px, 178px);
+		}
+		&_yield-management {
+			.svg-icon(icon-features-9, 178px, 178px);
+		}
+		&_creative-optimization {
+			.svg-icon(icon-features-10, 178px, 178px);
+		}
+		&_performance {
+			.svg-icon(icon-features-11, 178px, 178px);
+		}
 	}
 	&__slider-item-title {
 		text-align: center;
