--- a/src/templates/01_guest-home.twig
+++ b/src/templates/01_guest-home.twig
@@ -92,7 +92,7 @@
 						</div>
 						<div class="swiper-slide">
 							<div class="features__slider-item loaded">
-								<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
+								<div class="features__slider-item-icon features__slider-item-icon_integrated-marketing"></div>
 								<p class="features__slider-item-title">INTEGRATED MARKETING SOLUTION</p>
 								<div class="features__slider-item-divider"></div>
 								<div class="features__slider-item-text">Open and customise technical platform (DSP - the auction media model, which automates the purchasing of online advertising on behalf of advertisers)</div>
@@ -100,9 +100,9 @@
 						</div>
 						<div class="swiper-slide">
 							<div class="features__slider-item loaded">
-								<div class="features__slider-item-icon features__slider-item-icon_online-interface"></div>
+								<div class="features__slider-item-icon features__slider-item-icon_optimisation"></div>
 								<p class="features__slider-item-title">
-									OPTHIMISATION OF THE RTB PURCHASES
+									OPTIMISATION OF THE RTB PURCHASES
 								</p>
 								<div class="features__slider-item-divider"></div>
 								<div class="features__slider-item-text">YourAdsMedia SSP (Supply Side Platform) automates sales traffic and make more money on those sales. You have complete control over the scope and priorities of the traffic offered for sale RTB-buyers
@@ -111,7 +111,7 @@
 						</div>
 						<div class="swiper-slide">
 							<div class="features__slider-item loaded">
-								<div class="features__slider-item-icon features__slider-item-icon_management-interface"></div>
+								<div class="features__slider-item-icon features__slider-item-icon_any-format"></div>
 								<p class="features__slider-item-title">
 									ANY ADVERTISING FORMATS
 								</p>
