--- a/src/css/form.less
+++ b/src/css/form.less
@@ -246,6 +246,9 @@
 			display: flex;
 		}
 	}
+	&__down-wrap {
+		text-align: center;
+	}
 }
 
 @media screen and (max-width: 1100px) {
@@ -313,6 +316,9 @@
 			&_account {
 				width: 100%;
 			}
+		}
+		&__checkbox-text {
+			font-size: @14;
 		}
 
 	}
