Add dropodwns for header

--- a/src/css/blocks/guest/cta.less
+++ b/src/css/blocks/guest/cta.less
@@ -1,6 +1,7 @@
 .cta {
 	background-position: center center;
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	background-size: cover;
 	padding-top: 143px;
 	padding-bottom: 143px;
@@ -16,7 +17,7 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background: rgba(0,0,0,.3);
+		background: rgba(29, 35, 45, 0.7);
 		z-index: 10;
 	}
 
