--- a/src/css/blocks/guest/image-block.less
+++ b/src/css/blocks/guest/image-block.less
@@ -3,6 +3,7 @@
 	padding-bottom: 73px;
 
 	background-position: center center;
+	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
@@ -13,7 +14,7 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background: rgba(0,0,0,.3);
+		background: rgba(29, 35, 45, 0.7);
 		z-index: 10;
 	}
 
