--- a/src/css/main.less
+++ b/src/css/main.less
@@ -17,6 +17,7 @@
 	@import "blocks/chart";
 	@import "blocks/table-scroller";
 	@import "blocks/up-arrow";
+	@import "blocks/desktop-dropdown";
 
 
 	//PUBLISHERS
