--- a/src/templates/12_publisher-export.twig
+++ b/src/templates/12_publisher-export.twig
@@ -9,7 +9,7 @@
 {% block content %}
 
 	{#EXPORT#}
-	<div class="publishers">
+	<div class="publishers js-page">
 		<div class="publishers__bg" style="background-image: url(img/publish_bg.jpg)">
 			<div class="publishers__bg-darken">
 				<div class="publishers__inner container-publishers">
