--- a/src/templates/19_existing-orders-advertisers.twig
+++ b/src/templates/19_existing-orders-advertisers.twig
@@ -7,7 +7,7 @@
 
 {% block content %}
 {#EXISTING ORDERS ADVERTISERS#}
-	<div class="std-adv"  style="background-image: url(img/contact-us-bg.jpg)">
+	<div class="std-adv js-page"  style="background-image: url(img/contact-us-bg.jpg)">
 		<div class="std-adv__container container">
 			<h1 class="std-adv__title">Existing Orders</h1>
 			<div class="std-adv__content">
