--- a/src/templates/21_home-advertisers.twig
+++ b/src/templates/21_home-advertisers.twig
@@ -7,7 +7,7 @@
 
 {% block content %}
 {#HOME ADVERTISERS#}
-	<div class="std-adv std-adv_home"  style="background-image: url(img/contact-us-bg.jpg)">
+	<div class="std-adv std-adv_home js-page"  style="background-image: url(img/contact-us-bg.jpg)">
 		<div class="std-adv__container container">
 			<h1 class="std-adv__title">Welcome back !</h1>
 			<div class="std-adv__content">
