--- a/src/templates/parts/layout-advertisers.twig
+++ b/src/templates/parts/layout-advertisers.twig
@@ -15,7 +15,7 @@
 
 <body>
 
-<div class="all-wrap">
+<div class="all-wrap" id="all-wrap">
 	{% block header %}
 		{% include 'parts/header-advertisers.twig' %}
 	{% endblock %}
