--- a/src/css/blocks/guest/top-block.less
+++ b/src/css/blocks/guest/top-block.less
@@ -9,6 +9,7 @@
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
+		background-attachment: fixed;
 		position: absolute;
 		top: 0;
 		left: 0;
