--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -23,7 +23,7 @@
 		background-color: #65686E;
 	}
 	&__bg-darken {
-		background-color: rgba(45, 47, 54, 0.7);
+		background: rgba(29, 35, 45, 0.7);
 		flex-grow: 20;
 		display: flex;
 		flex-direction: column;
