--- a/src/templates/11_publishers-edit-account.twig
+++ b/src/templates/11_publishers-edit-account.twig
@@ -9,7 +9,7 @@
 {% block content %}
 
 	{#EDIT ACCOUNT#}
-	<div class="publishers">
+	<div class="publishers js-page">
 		<div class="publishers__bg" style="background-image: url(img/publish_bg.jpg)">
 			<div class="publishers__bg-bottom"></div>
 			<div class="publishers__bg-darken">
