--- a/src/templates/13_publishers-advertisers.twig
+++ b/src/templates/13_publishers-advertisers.twig
@@ -7,7 +7,7 @@
 
 {% block content %}
 	{#PUBLISHERS ADVERTISERS#}
-	<div class="std-adv" style="background-image: url(img/contact-us-bg.jpg)">
+	<div class="std-adv js-page" style="background-image: url(img/contact-us-bg.jpg)">
 		<div class="std-adv__container container">
 			<div class="std-adv__title-wrap">
 				<h1 class="std-adv__title">Our Publishers</h1>
