--- a/src/templates/14_new-add-advertisers.twig
+++ b/src/templates/14_new-add-advertisers.twig
@@ -7,7 +7,7 @@
 
 {% block content %}
 {#NEW ADD ADVERTISERS#}
-	<div class="std-adv"  style="background-image: url(img/contact-us-bg.jpg)">
+	<div class="std-adv js-page"  style="background-image: url(img/contact-us-bg.jpg)">
 		<div class="std-adv__container container">
 			<h1 class="std-adv__title">Create a New Ad</h1>
 			<div class="std-adv__content std-adv__content_center">
