--- a/src/templates/parts/header-publishers.twig
+++ b/src/templates/parts/header-publishers.twig
@@ -46,10 +46,20 @@
 
 		{#RIGHT PART#}
 		<div class="header__right-part">
-			<a href="#" class="header__login">
+			<div class="header__login js-header-item-dropdown">
 				<i class="header__login-icon"></i>
 				<span class="header__login-text">Kalista</span>
-			</a>
+				{#DROPDOWN#}
+				<div class="desktop-dropdown js-desktop-dropdown">
+					<div class="desktop-dropdown__link-wrap">
+						<a href="#" class="desktop-dropdown__link">Edit account</a>
+					</div>
+					<div class="desktop-dropdown__link-wrap">
+						<a href="#" class="desktop-dropdown__link">Log off</a>
+					</div>
+				</div>
+				{#/DROPDOWN#}
+			</div>
 		</div>
 		{#/RIGHT PART#}
 
