--- a/src/templates/01_publishers-new-place.twig
+++ b/src/templates/01_publishers-new-place.twig
@@ -9,7 +9,7 @@
 {% block content %}
 
 	{#PUBLISHERS#}
-	<div class="publishers">
+	<div class="publishers" id="top">
 		<div class="publishers__bg" style="background-image: url(img/publish_bg.jpg)">
 			<div class="publishers__bg-darken">
 				<div class="publishers__inner container-publishers">
