--- a/src/templates/parts/layout-publishers.twig
+++ b/src/templates/parts/layout-publishers.twig
@@ -27,7 +27,7 @@
 		{% include 'parts/footer-publishers.twig' %}
 	{% endblock %}
 
-	<div class="up-arrow"></div>
+	<div class="up-arrow" id="up-arrow"></div>
 
 </div>
 
