Add scroller on publish pages

--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -49,6 +49,7 @@
 	}
 	&__table {
 		padding-bottom: 65px;
+
 	}
 	&__table-title {
 		display: flex;
@@ -71,10 +72,12 @@
 	&__table-block {
 		border: 1px solid white;
 		padding: 22px 0 55px 0;
+		position: relative;
+		overflow: hidden;
+
 		&_mesages {
 			padding: 24px;
 		}
-		overflow: hidden;
 	}
 	&__table-block-inner {
 		overflow: auto;
