--- a/src/css/blocks/publishers/payments-list.less
+++ b/src/css/blocks/publishers/payments-list.less
@@ -38,6 +38,7 @@
 		border: 1px solid white;
 		padding: 18px 0 74px 0;
 		overflow: hidden;
+		position: relative;
 	}
 	&__inner {
 		max-height: 390px;
