--- a/src/templates/12_publisher-export.twig
+++ b/src/templates/12_publisher-export.twig
@@ -118,6 +118,7 @@
 												<div class="form__date">Month:</div>
 												<div class="form__select-holder form__select-holder_small">
 													<select class="form__select form__select_small">
+														<option disabled selected>Month</option>
 														<option>January</option>
 														<option>February</option>
 														<option>March</option>
@@ -137,7 +138,7 @@
 											<div class="form__date-select">
 												<div class="form__date">Year:</div>
 												<div class="form__input-holder">
-													<input type="text" class="form__input form__input_small">
+													<input type="text" class="form__input form__input_small" placeholder="Year">
 												</div>
 											</div>
 										</div>
