Add publishers home page

--- a/src/css/blocks/chart.less
+++ b/src/css/blocks/chart.less
@@ -1,4 +1,4 @@
-#home-adv-chart svg>g path[stroke="none"] {
+.chart-container svg>g path[stroke="none"] {
 	fill: url(#fx) !important;
 	fill-opacity:1 !important;
 }
