--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -36,18 +36,19 @@
 		<li><a href="09_publishers-places.html">03. Publishers Places</a></li>
 		<li><a href="10_publishers-payments.html">04.Publishers Payments</a></li>
 		<li><a href="11_publishers-edit-account.html">05. Publishers Edit Account</a></li>
-		<li><a href="12_publisher-export.html">06. Publisher Export</a></li>
+		<li><a href="12_publishers-export.html">06. Publishers Export</a></li>
+		<li><a href="13_publishers-home.html">07. Publishers Home</a></li>
 
 		<li style="padding-top: 50px; padding-bottom: 10px; color: #00c9b3; text-decoration: underline;">ADVERTISERS</li>
-		<li><a href="13_publishers-advertisers.html">01. Publishers Advertisers</a></li>
-		<li><a href="14_new-add-advertisers.html">02. New Add Advertisers</a></li>
-		<li><a href="15_ads-advertisers.html">03. Ads Advertisers</a></li>
-		<li><a href="16_campaigns-advertisers.html">04. Campaigns Advertisers</a></li>
-		<li><a href="17_create-new-order-advertisers.html">05. Create New Order Advertisers</a></li>
-		<li><a href="18_edit-account-advertisers.html">06. Edit account Advertisers</a></li>
-		<li><a href="19_existing-orders-advertisers.html">07. Existing orders Advertisers</a></li>
-		<li><a href="20_export-advertisers.html">08. Export Advertisers</a></li>
-		<li><a href="21_home-advertisers.html">09. Home Advertisers</a></li>
+		<li><a href="14_publishers-advertisers.html">01. Publishers Advertisers</a></li>
+		<li><a href="15_new-add-advertisers.html">02. New Add Advertisers</a></li>
+		<li><a href="16_ads-advertisers.html">03. Ads Advertisers</a></li>
+		<li><a href="17_campaigns-advertisers.html">04. Campaigns Advertisers</a></li>
+		<li><a href="18_create-new-order-advertisers.html">05. Create New Order Advertisers</a></li>
+		<li><a href="19_edit-account-advertisers.html">06. Edit account Advertisers</a></li>
+		<li><a href="20_existing-orders-advertisers.html">07. Existing orders Advertisers</a></li>
+		<li><a href="21_export-advertisers.html">08. Export Advertisers</a></li>
+		<li><a href="22_home-advertisers.html">09. Home Advertisers</a></li>
 
 	</ul>
 {% endblock %}
