--- a/src/templates/parts/layout-advertisers.twig
+++ b/src/templates/parts/layout-advertisers.twig
@@ -27,6 +27,8 @@
 		{% include 'parts/footer-advertisers.twig' %}
 	{% endblock %}
 
+	<div class="up-arrow" id="up-arrow"></div>
+
 	{% block userscripts %}
 	{% endblock %}
 </div>
