--- a/src/templates/parts/layout-guest.twig
+++ b/src/templates/parts/layout-guest.twig
@@ -26,6 +26,11 @@
 	{% block footer %}
 		{% include 'parts/footer-guest.twig' %}
 	{% endblock %}
+
+	<div class="up-arrow" id="up-arrow"></div>
+
+	{% block userscripts %}
+	{% endblock %}
 </div>
 
 <!-- uncache -->
