--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -118,11 +118,18 @@
 			width: 54%;
 		}
 	}
+	&__chart {
+		height: 500px;
+	}
 }
 
 @media screen and (max-width: 768px) {
 	.publishers {
 		padding-top: 43px;
+
+		&__chart {
+			height: 350px;
+		}
 	}
 }
 
@@ -211,6 +218,14 @@
 				width: 100%;
 				height: 24px;
 			}
+		}
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.publishers {
+		&__chart {
+			height: 200px;
 		}
 	}
 }
