--- a/src/templates/08_publishers-messages.twig
+++ b/src/templates/08_publishers-messages.twig
@@ -53,8 +53,8 @@
 						<div class="publishers__title">Existing Messages</div>
 
 						{#TABLE#}
-						<div class="publishers__table">
-							<div class="publishers__table-block publishers__table-block_mesages">
+						<div class="publishers__table publishers__table_messages">
+							<div class="publishers__table-block publishers__table-block_messages">
 								<p class="publishers__table-block-no-messages">No one message is available</p>
 							</div>
 						</div>
