--- a/src/templates/09_publishers-places.twig
+++ b/src/templates/09_publishers-places.twig
@@ -40,8 +40,8 @@
 								<p class="places__item places__item_8"></p>
 								<p class="places__item places__item_9"></p>
 							</div>
-							<a href="#" class="places__export"></a>
 						</div>
+						<a href="#" class="places__export">Export data to a CSV file</a>
 						{#/YOU PLACES#}
 
 					</div>
