--- a/src/css/blocks/publishers/places.less
+++ b/src/css/blocks/publishers/places.less
@@ -1,7 +1,6 @@
 .places {
 
 	&__table {
-		padding-bottom: 43px;
 	}
 	&__table-title {
 		padding-bottom: 32px;
@@ -9,7 +8,7 @@
 	}
 	&__title-item {
 		.medium();
-		font-size: 14px;
+		font-size: @14;
 		line-height: 1.29;
 		color: #ffffff;
 		text-align: center;
@@ -59,7 +58,7 @@
 	}
 	&__item {
 		.medium();
-		font-size: 14px;
+		font-size: @14;
 		line-height: 1.29;
 		color: #ffffff;
 		text-align: center;
@@ -98,6 +97,7 @@
 		font-size: @16;
 		line-height: 1.13;
 		text-decoration: none;
+		display: block;
 	}
 }
 
@@ -115,7 +115,7 @@
 		}
 		&__title-item {
 			.medium();
-			font-size: 14px;
+			font-size: @12;
 			line-height: 1.29;
 			color: #ffffff;
 			text-align: left;
@@ -159,7 +159,7 @@
 		}
 		&__item {
 			.medium();
-			font-size: 14px;
+			font-size: @12;
 			line-height: 1.29;
 			color: #ffffff;
 			text-align: center;
@@ -193,6 +193,11 @@
 				width: 100%;
 			}
 
+		}
+		&__export {
+			margin-top: 23px;
+			text-align: center;
+			font-size: @12;
 		}
 
 	}
