--- a/src/css/form.less
+++ b/src/css/form.less
@@ -236,12 +236,13 @@
 		font-size: 16px;
 		color: #ffffff;
 		.light();
+		text-align: left;
 	}
 	&__export-block {
 		display: none;
 		flex-direction: column;
 		justify-content: space-between;
-		min-height: 420px;
+		min-height: 410px;
 		&_active {
 			display: flex;
 		}
