--- a/src/templates/11_publishers-edit-account.twig
+++ b/src/templates/11_publishers-edit-account.twig
@@ -11,7 +11,6 @@
 	{#EDIT ACCOUNT#}
 	<div class="publishers js-page">
 		<div class="publishers__bg" style="background-image: url(img/publish_bg.jpg)">
-			<div class="publishers__bg-bottom"></div>
 			<div class="publishers__bg-darken">
 				<div class="publishers__inner container-publishers">
 					<div class="publishers__block">
@@ -153,10 +152,10 @@
 									</div>
 									<div class="form__select-holder">
 										<select class="form__select">
-											<option class="form__input-select-option">Siler</option>
-											<option class="form__input-select-option">Other Siler</option>
-											<option class="form__input-select-option">Not Siler</option>
-											<option class="form__input-select-option">Siler</option>
+											<option class="form__input-select-option">Silver</option>
+											<option class="form__input-select-option">Other Silver</option>
+											<option class="form__input-select-option">Not Silver</option>
+											<option class="form__input-select-option">Some Silver</option>
 										</select>
 									</div>
 								</div>
