--- a/src/templates/12_publisher-export.twig
+++ b/src/templates/12_publisher-export.twig
@@ -115,7 +115,7 @@
 									<div class="form__down-wrap">
 										<div class="form__date-select-wrap">
 											<div class="form__date-select">
-												<div class="form__date">Month:</div>
+												<div class="form__date">Month</div>
 												<div class="form__select-holder form__select-holder_small">
 													<select class="form__select form__select_small">
 														<option disabled selected>Month</option>
