--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -128,7 +128,6 @@
 				text-align: center;
 				background: rgba(255,255,255,0.2);
 			}
-
 		}
 		&__table {
 			padding-bottom: 0;
@@ -137,6 +136,7 @@
 				width: 100%;
 				margin-left: 0;
 			}
+		}
 		&__chart {
 			height: 350px;
 		}
