--- a/src/templates/13_publishers-home.twig
+++ b/src/templates/13_publishers-home.twig
@@ -16,7 +16,13 @@
 					<div class="publishers__block">
 						<h1 class="publishers__title">Welcome back !</h1>
 						{#CHART#}
-						<div class="publishers__chart chart-container" id="home-publishers-chart"></div>
+						<div class="chart">
+							<div class="chart__itself chart-container" id="home-publishers-chart"></div>
+							<div class="chart__tabs">
+								<a href="#" class="chart__tabs-item chart__tabs-item_active js-chart-tab" data-id="2">Month</a>
+								<a href="#" class="chart__tabs-item js-chart-tab" data-id="3">Years</a>
+							</div>
+						</div>
 						{#/CHART#}
 					</div>
 				</div>
@@ -56,7 +62,7 @@
 					},
 
 					hAxis: {
-						title: 'Year',
+						title: '',
 						titleTextStyle: {
 							color: '#ffffff'
 						},
@@ -84,9 +90,14 @@
 						// 'width': '90%',
 						'height': '80%',
 						top: 10,
+						bottom: 40,
 						left: 80,
 						right: 80,
 					},
+//					animation:{
+//						duration: 1000,
+//						easing: 'out',
+//					},
 				};
 				// Instantiate and draw our chart, passing in some options.
 				var chart = new google.visualization.AreaChart(document.getElementById('home-publishers-chart'));
@@ -118,6 +129,27 @@
 				});
 
 				chart.draw(data, options);
+
+				function tabClick() {
+					var $link = $('.js-chart-tab');
+
+					$link.click(function() {
+						var $t = $(this);
+
+						$link.removeClass('chart__tabs-item_active');
+						$t.addClass('chart__tabs-item_active');
+
+						// Your logics go here
+
+						data.setValue(0, 1, 1200);
+						chart.draw(data, options);
+
+						return false;
+					});
+				}
+
+				tabClick();
+
 			}
 		})();
 	</script>
